--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@
 <body>
     <div id="site-header"></div>
 </body>
+    <div id="site-header"></div>
 
     <main>
         <!-- Hero Section -->
