--- a/espanol.html
+++ b/espanol.html
@@ -65,8 +65,7 @@
         /* Hero Section */
         .page-hero {
             background: linear-gradient(135deg, rgba(10,10,10,0.9) 0%, rgba(15,17,19,0.8) 100%), 
-                        url('https://images.unsplash.com/photo-1448375240586-882707db888b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1740&q=80') center/cover no-repeat;
-            padding: 5rem 0;
+url('https://images.unsplash.com/photo-1550399105-c4db5fb85c18?ixlib=rb-4.0.3&auto=format&fit=crop&w=1740&q=80');            padding: 5rem 0;
             text-align: center;
             margin-bottom: 3rem;
         }
@@ -159,22 +158,22 @@
             padding: 3rem 0;
         }
 
-        .section-title {
-            font-weight: 700;
-            margin-bottom: 3rem;
-            text-align: center;
-            position: relative;
-        }
-
-        .section-title:after {
-            content: '';
-            display: block;
-            width: 80px;
-            height: 4px;
-            background: linear-gradient(90deg, var(--primary), var(--accent));
-            margin: 1rem auto;
-            border-radius: 2px;
-        }
+         .section-title {
+    font-size: 1.8rem;
+    font-weight: 700;
+    color: var(--text-light);
+    position: relative;
+    margin-bottom: 2rem;
+}
+      .section-title:after {
+    content: '';
+    display: block;
+    width: 60px;
+    height: 4px;
+    background: linear-gradient(90deg, var(--primary), var(--accent));
+    margin-top: 0.5rem;
+    border-radius: 2px;
+}
 
         /* Listas mejoradas */
         .resource-list {
@@ -330,10 +329,15 @@
 </head>
 <body>
     <div id="site-header"></div>
-
+  <section class="page-hero">
+            <div class="container">
+                 <h1 class="fade-in">Español - Lengua y Comunicación</h1>
+                <h1 class="fade-in"></h1>
+            </div>
+        </section>
     <!-- Contenido principal -->
     <div class="container my-5">
-        <h1 class="section-title">Español - Deforestación y Comunicación</h1>
+        <h1 class="section-title">Deforestación y Comunicación</h1>
         
         <!-- Introducción -->
         <section class="mb-5">
