--- a/definicion.html
+++ b/definicion.html
@@ -6,10 +6,11 @@
     <title>Document</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="css/styles.css">
     <style>
         :root {
             --bg-dark: #0a0a0a;
-            --bg-card: #bcc4c9;
+            --bg-card: #363a3d;
             --bg-darker: #050505;
             --primary: #10b981;
             --accent: #f59e0b;
@@ -61,7 +62,7 @@
             background-color: rgba(245, 158, 11, 0.1);
         }
 
-        /* Hero Section */
+       /* Hero Section */
         .page-hero {
             background: linear-gradient(135deg, rgba(10,10,10,0.9) 0%, rgba(15,17,19,0.8) 100%), 
                         url('https://images.unsplash.com/photo-1448375240586-882707db888b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1740&q=80') center/cover no-repeat;
@@ -98,10 +99,13 @@
             overflow: hidden;
         }
 
-        .card:hover {
-            transform: translateY(-8px);
-            box-shadow: 0 12px 30px rgba(0,0,0,0.5);
-        }
+       .card:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+    border-color: var(--primary);
+}
+.card:hover {
+    transform: translateY(-5px);
+}
 
         .card-title {
             color: var(--text-light);
@@ -158,23 +162,22 @@
             padding: 3rem 0;
         }
 
-        .section-title {
-            font-weight: 700;
-            margin-bottom: 3rem;
-            text-align: center;
-            position: relative;
-        }
-
-        .section-title:after {
-            content: '';
-            display: block;
-            width: 80px;
-            height: 4px;
-            background: linear-gradient(90deg, var(--primary), var(--accent));
-            margin: 1rem auto;
-            border-radius: 2px;
-        }
-
+     .section-title {
+    font-size: 1.8rem;
+    font-weight: 700;
+    color: var(--text-light);
+    position: relative;
+    margin-bottom: 2rem;
+}
+      .section-title:after {
+    content: '';
+    display: block;
+    width: 60px;
+    height: 4px;
+    background: linear-gradient(90deg, var(--primary), var(--accent));
+    margin-top: 0.5rem;
+    border-radius: 2px;
+}
         /* Listas mejoradas */
         .resource-list {
             list-style: none;
