--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <title>Ecosistemas - Deforestación | Portal Educativo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
+   <link rel="stylesheet" href="css/styles.css">
+   <style>
         :root {
+
             --bg-dark: #0a0a0a;
-            --bg-card: #bcc4c9;
+            --bg-card:  #363a3d;
             --bg-darker: #050505;
             --primary: #10b981;
             --accent: #f59e0b;
@@ -160,23 +162,23 @@
         section {
             padding: 3rem 0;
         }
+.section-title {
+    font-size: 1.8rem;
+    font-weight: 700;
+    color: var(--text-light);
+    position: relative;
+    margin-bottom: 2rem;
+}
 
-        .section-title {
-            font-weight: 700;
-            margin-bottom: 3rem;
-            text-align: center;
-            position: relative;
-        }
-
-        .section-title:after {
-            content: '';
-            display: block;
-            width: 80px;
-            height: 4px;
-            background: linear-gradient(90deg, var(--primary), var(--accent));
-            margin: 1rem auto;
-            border-radius: 2px;
-        }
+       .section-title:after {
+    content: '';
+    display: block;
+    width: 60px;
+    height: 4px;
+    background: linear-gradient(90deg, var(--primary), var(--accent));
+    margin-top: 0.5rem;
+    border-radius: 2px;
+}
 
         /* Listas mejoradas */
         .resource-list {
@@ -187,7 +189,7 @@
         .resource-list li {
             padding: 1rem 1.5rem;
             margin-bottom: 1rem;
-            background-color: var(--bg-card);
+            background-color: #6c757d;
             border-radius: 8px;
             border-left: 4px solid var(--accent);
             transition: all 0.3s;
@@ -333,8 +335,6 @@
 
 <body>
     <div id="site-header"></div>
-</body>
-    <div id="site-header"></div>
 
     <main>
         <!-- Hero Section -->
@@ -348,14 +348,16 @@
         <!-- Contenido principal -->
         <div class="container my-5">
             <!-- Introducción -->
+              <div class="container my-5">
+            <h2 class="section-title">Entendiendo los Ecosistemas Forestales</h2>
             <section class="mb-5">
                 <div class="card">
-                    <div class="card-body">
-                        <h2 class="card-title">Entendiendo los Ecosistemas Forestales</h2>
-                        <p class="lead">Los ecosistemas forestales son complejas redes de vida que sostienen una gran variedad de especies y procesos naturales. La deforestación amenaza este delicado balance.</p>
+                        <div class="card-header">
+                                <h3 class="card-title h5">Los ecosistemas forestales son complejas redes de vida que sostienen una gran variedad de especies y procesos naturales. La deforestación amenaza este delicado balance.</h3>
+                            </div>
                         <div class="row mt-4">
                             <div class="col-md-6">
-                                <h3 class="h5">Objetivos de Aprendizaje</h3>
+                               
                                 <ul class="resource-list">
                                     <li>Comprender la estructura de los ecosistemas forestales</li>
                                     <li>Analizar el impacto de la deforestación</li>
