--- a/ingles.html
+++ b/ingles.html
@@ -64,8 +64,9 @@
 
         /* Hero Section */
         .page-hero {
-            background: linear-gradient(135deg, rgba(10,10,10,0.9) 0%, rgba(15,17,19,0.8) 100%), 
-                        url('https://images.unsplash.com/photo-1448375240586-882707db888b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1740&q=80') center/cover no-repeat;
+           background-image: linear-gradient(135deg, rgba(10,10,10,0.9) 0%, rgba(15,17,19,0.8) 100%), 
+                      url('https://images.unsplash.com/photo-1513635269975-59663e0ac1ad?ixlib=rb-4.0.3&auto=format&fit=crop&w=1740&q=80');
+
             padding: 5rem 0;
             text-align: center;
             margin-bottom: 3rem;
@@ -159,36 +160,36 @@
             padding: 3rem 0;
         }
 
-        .section-title {
-            font-weight: 700;
-            margin-bottom: 3rem;
-            text-align: center;
-            position: relative;
-        }
-
-        .section-title:after {
-            content: '';
-            display: block;
-            width: 80px;
-            height: 4px;
-            background: linear-gradient(90deg, var(--primary), var(--accent));
-            margin: 1rem auto;
-            border-radius: 2px;
-        }
+         .section-title {
+    font-size: 1.8rem;
+    font-weight: 700;
+    color: var(--text-light);
+    position: relative;
+    margin-bottom: 2rem;
+}
+      .section-title:after {
+    content: '';
+    display: block;
+    width: 60px;
+    height: 4px;
+    background: linear-gradient(90deg, var(--primary), var(--accent));
+    margin-top: 0.5rem;
+    border-radius: 2px;
+}
 
         /* Listas mejoradas */
-        .resource-list {
-            list-style: none;
-            padding: 0;
-        }
-
         .resource-list li {
             padding: 1rem 1.5rem;
             margin-bottom: 1rem;
-            background-color: var(--bg-card);
+            background-color: #6c757d;
             border-radius: 8px;
             border-left: 4px solid var(--accent);
             transition: all 0.3s;
+        }
+
+        .resource-list li:hover {
+            transform: translateX(5px);
+            background-color: rgba(245, 158, 11, 0.05);
         }
 
         .resource-list li:hover {
@@ -333,6 +334,12 @@
                 
 
     <!-- Contenido principal -->
+     <section class="page-hero">
+            <div class="container">
+                 <h1 class="fade-in">English</h1>
+                <h1 class="fade-in"></h1>
+            </div>
+        </section>
     <div class="container my-5">
         <h1 class="section-title">English - Deforestation Studies</h1>
         
