--- a/matematicas.html
+++ b/matematicas.html
@@ -64,10 +64,8 @@
 
         /* Hero Section */
         .page-hero {
-            background: linear-gradient(135deg, rgba(10,10,10,0.9) 0%, rgba(15,17,19,0.8) 100%), 
-                        url('https://images.unsplash.com/photo-1448375240586-882707db888b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1740&q=80') center/cover no-repeat;
-            padding: 5rem 0;
-            text-align: center;
+           background-image: linear-gradient(135deg, rgba(10,10,10,0.9) 0%, rgba(15,17,19,0.8) 100%), 
+                      url('https://images.unsplash.com/photo-1518644730709-0835105d9e20?ixlib=rb-4.0.3&auto=format&fit=crop&w=1740&q=80');            text-align: center;
             margin-bottom: 3rem;
         }
 
@@ -158,24 +156,22 @@
         section {
             padding: 3rem 0;
         }
-
-        .section-title {
-            font-weight: 700;
-            margin-bottom: 3rem;
-            text-align: center;
-            position: relative;
-        }
-
-        .section-title:after {
-            content: '';
-            display: block;
-            width: 80px;
-            height: 4px;
-            background: linear-gradient(90deg, var(--primary), var(--accent));
-            margin: 1rem auto;
-            border-radius: 2px;
-        }
-
+  .section-title {
+    font-size: 1.8rem;
+    font-weight: 700;
+    color: var(--text-light);
+    position: relative;
+    margin-bottom: 2rem;
+}
+      .section-title:after {
+    content: '';
+    display: block;
+    width: 60px;
+    height: 4px;
+    background: linear-gradient(90deg, var(--primary), var(--accent));
+    margin-top: 0.5rem;
+    border-radius: 2px;
+}
         /* Listas mejoradas */
         .resource-list {
             list-style: none;
@@ -332,6 +328,12 @@
      <div id="site-header"></div>
               
     <!-- Contenido principal -->
+      <section class="page-hero">
+            <div class="container">
+                 <h1 class="fade-in">Matemáticas</h1>
+                <h1 class="fade-in"></h1>
+            </div>
+        </section>
     <div class="container my-5">
         <h1 class="section-title">Matemáticas - Análisis Cuantitativo de la Deforestación</h1>
         
