--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                                 </div>
                                 <h3 class="h5">Investigación de Campo</h3>
                                 <p class="card-text">Actividades para estudiar ecosistemas locales y sus características.</p>
-                                <a href="#" class="btn-resource">Ver Guía</a>
+                                <a hrefhttps://teachy.ai/es/proyecto/educacion-media/media-superior-1-grado/ciencias-ambientales-a-espanol/explorando-la-biodiversidad-un-estudio-de-campo-y-evaluacion-del-ecosistema" class="btn-resource">Ver Guía</a>
                             </div>
                         </div>
                     </div>
@@ -554,7 +554,7 @@
                                 </div>
                                 <h3 class="h5">Experimentos</h3>
                                 <p class="card-text">Experimentos prácticos sobre procesos ecosistémicos.</p>
-                                <a href="#" class="btn-resource">Ver Actividades</a>
+                                <a href="https://ceipfelixplaza.es/experimentos-practicos-de-ecologia-en-talleres-de-ciencia/" class="btn-resource">Ver Actividades</a>
                             </div>
                         </div>
                     </div>
@@ -567,7 +567,7 @@
                                 </div>
                                 <h3 class="h5">Proyectos</h3>
                                 <p class="card-text">Proyectos de conservación y restauración a pequeña escala.</p>
-                                <a href="#" class="btn-resource">Ver Proyectos</a>
+                                <a href="https://www.tramites.inah.gob.mx/Guia_para_la_elaboraci%C3%B3n_de_proyectos.pdf" class="btn-resource">Ver Proyectos</a>
                             </div>
                         </div>
                     </div>
