--- a/prevencion.html
+++ b/prevencion.html
@@ -512,7 +512,7 @@
                                 <p class="card-text">
                                     Trabaja globalmente para proteger bosques y vida silvestre.
                                 </p>
-                                <a href="#" class="btn btn-resource btn-sm">Visitar Sitio</a>
+                                <a href="https://www.wwf.org.mx/" class="btn btn-resource btn-sm">Visitar Sitio</a>
                             </div>
                         </div>
                     </div>
@@ -524,7 +524,7 @@
                                 <p class="card-text">
                                     Campañas internacionales contra la deforestación ilegal.
                                 </p>
-                                <a href="#" class="btn btn-resource btn-sm">Visitar Sitio</a>
+                                <a href="https://www.greenpeace.org/mexico/" class="btn btn-resource btn-sm">Visitar Sitio</a>
                             </div>
                         </div>
                     </div>
@@ -536,7 +536,7 @@
                                 <p class="card-text">
                                     Protege tierras y aguas mediante ciencia y conservación.
                                 </p>
-                                <a href="#" class="btn btn-resource btn-sm">Visitar Sitio</a>
+                                <a href="https://www.nature.org/es-us/  " class="btn btn-resource btn-sm">Visitar Sitio</a>
                             </div>
                         </div>
                     </div>
